# SIEMForge

./: .gitignore  BUGS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt  siemforge.py
.github/workflows/: ci.yml
SIEMForge/: LICENSE.md  README.md  siemforge.py
configs/: sysmon_config.xml  wazuh_agent_snippet.xml  wazuh_local_rules.xml
converters/: __init__.py  base.py  elastic.py  kibana.py  splunk.py
rules/sigma/: defender_tampering.yml  local_admin_creation.yml  lsass_credential_dump.yml  powershell_suspicious_execution.yml  process_injection_sysmon.yml  psexec_lateral_movement.yml  registry_run_key_persistence.yml  scheduled_task_persistence.yml  ssh_bruteforce_burst.yml  suspicious_service_install.yml
samples/: clean_baseline.json  credential_dump.json  network_scan.csv  persistence_mixed.json  powershell_attack.json  process_injection.json  service_install.json  user_creation.json
siemforge/: __init__.py  __main__.py  cli.py  display.py  export.py  loader.py  mitre.py  scanner.py  stats.py  test_commands.py  validator.py
tests/: test_cli.py  test_converters.py  test_export.py  test_loader.py  test_modules.py  test_scanner.py  test_stats.py  test_validator.py
